--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,58 @@ services:
         volumes:
             - 'rinhadb:/var/lib/postgresql/data'
             - './db.sql:/docker-entrypoint-initdb.d/init.sql'
+        deploy:
+            resources:
+                limits:
+                    cpus: '1.0'
+                    memory: '300MB'
+
+    api01:
+        networks:
+            - app
+        image: moaabb/rinha-go-2024-q1:1.0
+        environment:
+            - PORT=8080
+            - DB_URL=postgres://moab:supersecure@db:5432/rinhadb
+        depends_on:
+            - db
+        deploy:
+            resources:
+                limits:
+                    cpus: '0.33'
+                    memory: '95MB'
+
+    api02:
+        networks:
+            - app
+        image: moaabb/rinha-go-2024-q1:1.0
+        environment:
+            - PORT=8080
+            - DB_URL=postgres://moab:supersecure@db:5432/rinhadb
+        depends_on:
+            - db]
+        deploy:
+            resources:
+                limits:
+                    cpus: '0.33'
+                    memory: '95MB'
+
+    nginx:
+        networks:
+            - app
+        image: nginx:latest
+        volumes:
+            - ./nginx.conf:/etc/nginx/nginx.conf:ro
+        depends_on:
+            - api01
+            - api02
+        ports:
+            - '9999:9999'
+        deploy:
+            resources:
+                limits:
+                    cpus: '0.17'
+                    memory: '10MB'
 
 networks:
     app:
