--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,63 +11,70 @@ services:
             POSTGRES_USER: moab
             POSTGRES_DB: rinhadb
         volumes:
-            - 'rinhadb:/var/lib/postgresql/data'
             - './db.sql:/docker-entrypoint-initdb.d/init.sql'
+        command: postgres -c checkpoint_timeout=600 -c max_wal_size=4096
+        healthcheck:
+            test: pg_isready -U "$$POSTGRES_USER" -d "$$POSTGRES_DB"
+            interval: 10s
+            timeout: 2s
+            retries: 10
         deploy:
             resources:
                 limits:
-                    cpus: '1.0'
-                    memory: '300MB'
+                    cpus: '0.6'
+                    memory: '700MB'
 
-    api01:
+    api01: &api01
         networks:
             - app
         image: moaabb/rinha-go-2024-q1:1.0
         environment:
             - PORT=8080
+            - POOL_SIZE=5
             - DB_URL=postgres://moab:supersecure@db:5432/rinhadb
         depends_on:
             - db
+        restart: always
         deploy:
             resources:
                 limits:
-                    cpus: '0.33'
-                    memory: '95MB'
+                    cpus: '0.3'
+                    memory: '100MB'
 
     api02:
-        networks:
-            - app
-        image: moaabb/rinha-go-2024-q1:1.0
-        environment:
-            - PORT=8080
-            - DB_URL=postgres://moab:supersecure@db:5432/rinhadb
-        depends_on:
-            - db]
-        deploy:
-            resources:
-                limits:
-                    cpus: '0.33'
-                    memory: '95MB'
+        <<: *api01
+    # api03:
+    #     <<: *api01
+    # api04:
+    #     <<: *api01
+    # api05:
+    #     <<: *api01
+    # api06:
+    #     <<: *api01
+    # api07:
+    #     <<: *api01
+    # api08:
+    #     <<: *api01
+    # api09:
+    #     <<: *api01
 
     nginx:
         networks:
             - app
         image: nginx:latest
         volumes:
-            - ./nginx.conf:/etc/nginx/nginx.conf:ro
+            - ./config/nginx.conf:/etc/nginx/nginx.conf:ro
+        ports:
+            - '9999:9999'
+        restart: always
         depends_on:
             - api01
             - api02
-        ports:
-            - '9999:9999'
         deploy:
             resources:
                 limits:
-                    cpus: '0.17'
-                    memory: '10MB'
+                    cpus: '0.2'
+                    memory: '50MB'
 
 networks:
     app:
-
-volumes:
-    rinhadb:
